# rtmidi2

./: .gitignore  LICENSE  MANIFEST  MANIFEST.in  README.rst  inside-docker.sh  mkdocs.yml  publish-linux  pyproject.toml  readthedocs.yml  rtmidi2.pyx  setup.py  tests.py
.github/workflows/: wheels.yml
docs/: generatedocs.py  index.md  reference.md
docs/stylesheets/: extra.css
