[project]
name = "rtmidi2"
authors = [
    { name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" }
]
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.8"

classifiers = [
    "Topic :: Software Development"
]

[build-system]

requires = [
    "setuptools>=61",
    "wheel",
    "cython"
]

build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/gesellkammer/rtmidi2"
repository = "https://github.com/gesellkammer/rtmidi2"
