[project]
name = "rtmidi2"
authors = [
    { name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" }
]

readme = "README.rst"
requires_python = "^3.8"
homepage = "https://github.com/gesellkammer/rtmidi2"
repository = "https://github.com/gesellkammer/rtmidi2"

classifiers = [
    "Topic :: Software Development"
]

[build-system]

requires = [
    "setuptools>=42",
    "wheel",
    "cython"
]

build-backend = "setuptools.build_meta"

